Thu Feb 19 02:23:09 2026  Jiri (George) Lebl <jirka@5z.com>

        * lib/calculus/integration.gel: Implement the Adaptive Gauss-Kronrod
	  G7 K15 rule and use it as the default NumericalIntegral function.

        * lib/calculus/integration.gel: Make the steps n argument optional in
	  the various midpoint, left/right hand, trapezoidal rules,
	  and use NumericalIntegralSteps as default value.

        * src/funclib.c: as above for the CompositeSimpsonsRule

	* src/calc.h: update the copyright string

	* src/geniustests.txt: add some tests.

	* help/C/genius.xml: document the new functions.

	* rename examples/trapezoid-rule-doubling.gel for consistency.

Wed Feb 18 14:52:08 2026  Jiri (George) Lebl <jiri.lebl@gmail.com>

	* examples/left-hand|midpoint|trapezoidal-rule-doubling.gel: Add
	  left-hand, midpoint, trapezoidal rule examples

Sat Aug 09 16:10:24 2025  Jiri (George) Lebl <jirka@5z.com>

	* Prepare for 1.0.28 release

Sat Aug 09 16:01:31 2025  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: Fix an undocumented behavior, fix
	  possible reentrancy condition, fix warning

Mon Jul 07 17:45:20 2025  Jiri (George) Lebl <jirka@5z.com>

	* src/compil.c, src/geloutput.c, src/genius.c, src/calc.c: Fix a
	  couple of minor issues, fix command line parsing, fix some warnings

Thu Jul 03 18:00:31 2025  Jiri (George) Lebl <jiri.lebl@gmail.com>

	* lib/number_theory/primes.gel: Update for the newest limit (exceeds
	  one more prime)

Mon Dec 09 12:40:16 2024  Jiri (George) Lebl <jiri.lebl@gmail.com>

	* lib/number_theory.gel: Update with the newest Mersenne prime

Mon Sep 09 19:26:40 2024  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: Fix a NULL dereference when plotting a curve in 3D

Tue Oct 03 23:23:52 2023  Jiri (George) Lebl <jirka@5z.com>

	* lib/calculus/integration.gel: Add TrapezoidRule, LeftHandRule,
	  RightHandRule
	
	* help/C/genius.xml: Document the new functions

	* src/geniustests.txt: add some tests 
