@@ -640,7 +640,7 @@ Numerator (3i/7+1)						7+3i
 Denominator (3i/7)						7
 Denominator (3i/7+1)						7
 (64^(1/2))/7							1 1/7
--1^2								1
+-1^2								-1
 (-1)^2								1
 a=1;-a^2							-1
 a=1;(-a)^2							1
