@@ -3,6 +3,10 @@ Changes to 1.0.28
 * Implement an adaptive Gauss-Kronrod integration and make it default
   for NumericalIntegral (adds AdaptiveGaussKronrod and GaussKronrodRule,
   and related parameters)
+* SYNTAX: Don't special case parsing -<number>^n it will be parsed now
+  as -(<number>^n) as it should be.  So -1^2 is now -1 as is only reasonable.
+  Not sure what originally possesed me to parse it as it did, but it recently bit
+  me because it makes no sense whatsoever.
 * Add midpoint, trapezoid, and left-hand rule graphical examples with showing
 * Improve the Euler method exponential example
 * Fix drawing points in postscript/PDF
