@@ -1,3 +1,15 @@
+Thu Feb 19 15:38:03 2026  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/eval.[ch], src/calc.c: Remove the special casing of -<number>^n
+	  and treat it as any other expression.
+
+	* src/parse.y: negate numbers immediately instead of waiting till
+	  execution.
+	
+	* help/C/genius.xml: fixup docs for the change above.
+
+	* src/geniustests.txt: fixup
+
 Thu Feb 19 02:23:09 2026  Jiri (George) Lebl <jirka@5z.com>
 
         * lib/calculus/integration.gel: Implement the Adaptive Gauss-Kronrod
